--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "formik": "^2.2.9",
     "@heroicons/react": "^2.0.18",
+    "chart.js": "^4.3.0",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.11.1",
@@ -20,6 +22,7 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
