--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "formik": "^2.2.9",
     "@heroicons/react": "^2.0.18",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.11.1",
     "recoil": "^0.7.7",
     "yup": "^1.1.1"
