--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "chart.js": "^4.3.0",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.6",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
