--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.9",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.11.1",
     "recoil": "^0.7.7",
+    "uuid": "^9.0.0",
     "yup": "^1.1.1"
   },
   "devDependencies": {
