--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.6",
     "formik": "^2.2.9",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
