--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "chart.js": "^4.3.0",
+    "dotenv": "^16.1.4",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.6",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.5",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.9",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.11.1",
     "recoil": "^0.7.7",
+    "swr": "^2.1.5",
     "uuid": "^9.0.0",
     "yup": "^1.1.1"
   },
