--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-lazy-load-image-component": "^1.6.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.11.1",
+    "react-star-ratings": "^2.3.0",
     "recoil": "^0.7.7",
     "swr": "^2.1.5",
     "uuid": "^9.0.0",
