--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@legendapp/state": "^1.2.8",
     "chart.js": "^4.3.0",
     "dotenv": "^16.1.4",
     "flowbite": "^1.6.5",
