--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.9",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-papaparse": "^4.1.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.11.1",
     "react-star-ratings": "^2.3.0",
